<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carlomatulessy.demobankapp.AboutActivity">

    <ImageView
        android:id="@+id/about_carlo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/carlo"/>

    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_carlo"
        android:layout_marginLeft="10dp"
        android:text="@string/about_text" />

    <View
        android:id="@+id/about_border"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorBackground"
        android:layout_below="@id/about_carlo"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/about_testnet_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/capgemini_button"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:onClick="openTestNet"
            android:text="@string/about_testnet_button"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/about_github_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/capgemini_button"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:onClick="openGithub"
            android:text="@string/about_github_button"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/about_carlo_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/capgemini_button"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:onClick="openCarloMatulessy"
            android:text="@string/about_carlo_button"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/about_capgemini_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/capgemini_button"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:onClick="openCapgemini"
            android:text="@string/about_capgemini_button"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_version"
        android:textAlignment="center"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/about_border"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@drawable/capgemini_edittext"/>

</RelativeLayout>
