<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mutation_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_mutation_info_title"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/dialog_mutation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mutation_dialog_header"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/mutation_account_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/signup_male"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/mutation_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/mutation_account_icon"/>

        <TextView
            android:id="@+id/mutation_account_iban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NL34 INGB 0008 0000 12"
            android:textSize="15sp"
            android:layout_toRightOf="@id/mutation_account_icon"
            android:layout_below="@id/mutation_account_name"/>

        <TextView
            android:id="@+id/mutation_account_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description:"
            android:textSize="15sp"
            android:layout_toRightOf="@id/mutation_account_icon"
            android:layout_below="@id/mutation_account_iban"/>

        <TextView
            android:id="@+id/mutation_account_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$1000"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:paddingRight="10dp"
            android:textColor="@android:color/holo_red_dark"/>


    </RelativeLayout>
    
    <View
        android:id="@+id/dialog_button_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBackground"
        android:layout_below="@id/dialog_mutation_container"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_button_border">
        <Button
            android:id="@+id/mutation_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_mutation_delete_button"
            android:background="@drawable/dialog_button"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:layout_below="@id/dialog_mutation_container"/>

        <Button
            android:id="@+id/mutation_transfer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_mutation_transfer_button"
            android:background="@drawable/dialog_button"/>
    </LinearLayout>


</RelativeLayout>